--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             margin: 5px;
             cursor: pointer;
         }
+        .score {
+            margin-top: 20px;
+            font-size: 24px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
@@ -37,9 +42,11 @@
         <button id="down">↓</button>
         <button id="right">→</button>
     </div>
+    <div class="score">Счёт: <span id="scoreValue">0</span></div>
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
+        const scoreElement = document.getElementById('scoreValue');
 
         const gridSize = 20;
         const tileCount = canvas.width / gridSize;
@@ -59,6 +66,7 @@
 
             if (head.x === food.x && head.y === food.y) {
                 score++;
+                scoreElement.textContent = score;
                 food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
             } else {
                 snake.pop();
@@ -86,6 +94,7 @@
             direction = { x: 0, y: 0 };
             food = { x: 15, y: 15 };
             score = 0;
+            scoreElement.textContent = score;
         }
 
         document.addEventListener('keydown', e => {
@@ -121,7 +130,7 @@
             if (direction.x === 0) direction = { x: 1, y: 0 };
         });
 
-        setInterval(gameLoop, 400);
+        setInterval(gameLoop, 100);
     </script>
 </body>
 </html>
