--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         }
         .controls {
             display: flex;
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
         }
         .controls button {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             font-size: 24px;
             margin: 10px;
             cursor: pointer;
@@ -35,10 +37,11 @@
             border: none;
             border-radius: 50%;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
         }
         .controls button:hover {
             background-color: #45a049;
+            transform: scale(1.1);
         }
         .score {
             margin-top: 20px;
@@ -55,9 +58,11 @@
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <div class="controls">
         <button id="up">↑</button>
-        <button id="left">←</button>
+        <div class="row">
+            <button id="left">←</button>
+            <button id="right">→</button>
+        </div>
         <button id="down">↓</button>
-        <button id="right">→</button>
     </div>
     <div class="score">Счёт: <span id="scoreValue">0</span></div>
     <script>
